# fast3r

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  get_poses.py  pyproject.toml  requirements.txt  setup.py
configs/: eval.yaml  train.yaml
configs/callbacks/: model_checkpoint.yaml
configs/data/: multiview_dust3r.yaml  multiview_dust3r_tiny.yaml
configs/debug/: ddp_debug.yaml
configs/eval/ablation_recon_better_inference_hp/: ablation_recon_better_inference_hp.yaml
configs/eval/ablation_recon_without_local_head/: ablation_recon_without_local_head.yaml
configs/eval/ablation_varying_test_views/: ablation_varying_test_views_10.yaml  default.yaml  (+4 more)
configs/logger/: wandb.yaml
configs/model/: fast3r.yaml
configs/trainer/: ddp_eval.yaml  deepspeed_stage_2.yaml  default.yaml
fast3r/: train.py
fast3r/data/: multiview_dust3r_datamodule.py
fast3r/dust3r/: inference.py  inference_multiview.py  losses.py  model.py  post_process.py  viz.py
fast3r/eval/: cam_pose_metric.py  recon_metric.py
fast3r/models/: fast3r.py  multiview_dust3r_module.py
fast3r/utils/: logging_utils.py  so3_utils.py  utils.py
fast3r/viz/: demo.py  video_utils.py  viser_visualizer.py
notebooks/: demo_multiview.ipynb  explore_datasets.ipynb  explore_dino.ipynb  figures.ipynb  re10k_metric.ipynb
scripts/: fast3r_re10k_pose_eval.py  robustmvd_eval.py
scripts/slurm/: cluster_status.py  submit.py  submit_ablation.py  submit_deepspeed.py  submit_eval.py  submit_train.py  submit_train_new.py  submit_train_torchrun.py
src/fast3r/: eval.py  resume_train.py
(+83 files in other folders)
