[project]
name = "fast3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryo Yonetani", email = "yonetani.vision@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "deepspeed>=0.16.9",
    "einops>=0.8.1",
    "gradio>=5.31.0",
    "huggingface-hub[torch]>=0.22",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "jupyterlab>=4.4.2",
    "lightning-bolts>=0.7.0",
    "lightning-utilities>=0.14.3",
    "lightning>=2.5.0",
    "matplotlib>=3.10.3",
    "numpy<2.0.0",
    "nvitop>=1.5.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pillow-heif>=0.22.0",
    "plotly>=6.1.1",
    "pre-commit>=4.2.0",
    "pyglet<2",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "roma>=1.5.2.1",
    "rootutils>=1.0.7",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.10",
    "viser>=0.2.23",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/fast3r"]
